# gclib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/gclib/: block.hpp  gc.hpp  params.hpp  util.hpp
src/: block.cpp  gc.cpp
test/: poly.cpp  test.cpp  tu.cpp  util.hpp
